Rename the 4 analysts to Event, Sentiment, Market and Quant

--- a/index.html
+++ b/index.html
@@ -51,7 +51,7 @@
     </div>
   </div>
 
-  <div id="global-footer">Yototec © All Rights Reserved 2025</div>
+  <div id="global-footer">Fundis.AI © All Rights Reserved 2025</div>
 
   <script src="assets/js/Person.js"></script>
   <script src="assets/js/Dog.js"></script>
