Add ending Block input

--- a/index.html
+++ b/index.html
@@ -53,6 +53,10 @@
                 <option value="DOGE">DOGE</option>
               </select>
             </div>
+            <div class="form-group">
+              <label for="endBlock">Please input ending Block:</label>
+              <input type="number" id="endBlock" class="terminal-input" placeholder="Enter a number ≥ 200 (multiple of 50)" min="200" step="50" value="200">
+            </div>
           </div>
         </div>
 
