Sync Symbol supported with SentiChain Observation

--- a/index.html
+++ b/index.html
@@ -50,7 +50,14 @@
               <select id="symbolSelect" class="terminal-select">
                 <option value="BTC" selected>BTC</option>
                 <option value="ETH">ETH</option>
+                <option value="SOL">SOL</option>
+                <option value="XRP">XRP</option>
+                <option value="ADA">ADA</option>
+                <option value="AVAX">AVAX</option>
                 <option value="DOGE">DOGE</option>
+                <option value="TRX">TRX</option>
+                <option value="LINK">LINK</option>
+                <option value="DOT">DOT</option>
               </select>
             </div>
             <div class="form-group">
