Remove underline of Register

--- a/index.html
+++ b/index.html
@@ -42,7 +42,7 @@
           <div id="branding">Welcome to Fundis.AI</div>
           <div class="terminal-form">
             <div class="form-group">
-              <label for="apiKey">Please input your API Key (<a href="https://sentichain.com/app?tab=APIManagement" target="_blank" style="color: #00FFC8;">Register↗</a>):</label>
+              <label for="apiKey">Please input your API Key (<a href="https://sentichain.com/app?tab=APIManagement" target="_blank" style="color: #00FFC8; text-decoration: none;">Register↗</a>):</label>
               <input type="text" id="apiKey" class="terminal-input" placeholder="Paste or type your API key here">
             </div>
             <div class="form-group">
