Add light/dark toggle

--- a/index.html
+++ b/index.html
@@ -76,6 +76,12 @@
 
   <div id="global-footer">Fundis.AI © All Rights Reserved 2025</div>
 
+  <button id="theme-toggle" aria-label="Toggle dark mode">
+    <svg xmlns="http://www.w3.org/2000/svg" width="20" height="20" viewBox="0 0 24 24" fill="none" stroke="currentColor" stroke-width="2" stroke-linecap="round" stroke-linejoin="round">
+      <path d="M21 12.79A9 9 0 1 1 11.21 3 7 7 0 0 0 21 12.79z"></path>
+    </svg>
+  </button>
+
   <script src="assets/js/Person.js"></script>
   <script src="assets/js/Dog.js"></script>
   <script src="assets/js/main.js"></script>
