Relocate toggle to Toggle.js

--- a/index.html
+++ b/index.html
@@ -85,6 +85,7 @@
   <script src="assets/js/Person.js"></script>
   <script src="assets/js/Dog.js"></script>
   <script src="assets/js/main.js"></script>
+  <script src="assets/js/Toggle.js"></script>
 </body>
 
 </html>
