Relocate draw Objects to drawObjects.js

--- a/index.html
+++ b/index.html
@@ -3,7 +3,8 @@
 
 <head>
   <meta charset="UTF-8" />
-  <meta name="viewport" content="width=device-width, initial-scale=1.0, maximum-scale=1.0, user-scalable=no, viewport-fit=cover" />
+  <meta name="viewport"
+    content="width=device-width, initial-scale=1.0, maximum-scale=1.0, user-scalable=no, viewport-fit=cover" />
   <title>Fundis.AI</title>
   <meta name="description"
     content="Fundis.AI combines frontier AI innovations, quantitative methods and fundamentals research to turn market data into actionable insights, with a vision of transitioning to AI Agents to perform human-like investment research." />
@@ -42,7 +43,8 @@
           <div id="branding">Welcome to Fundis.AI</div>
           <div class="terminal-form">
             <div class="form-group">
-              <label for="apiKey">Please input your API Key (<a href="https://sentichain.com/app?tab=APIManagement" target="_blank" style="color: #00FFC8; text-decoration: none;">Register↗</a>):</label>
+              <label for="apiKey">Please input your API Key (<a href="https://sentichain.com/app?tab=APIManagement"
+                  target="_blank" style="color: #00FFC8; text-decoration: none;">Register↗</a>):</label>
               <input type="text" id="apiKey" class="terminal-input" placeholder="Paste or type your API key here">
             </div>
             <div class="form-group">
@@ -62,7 +64,8 @@
             </div>
             <div class="form-group">
               <label for="endBlock">Please input ending Block:</label>
-              <input type="number" id="endBlock" class="terminal-input" placeholder="Enter a number ≥ 200 (multiple of 50)" min="200" step="50" value="200">
+              <input type="number" id="endBlock" class="terminal-input"
+                placeholder="Enter a number ≥ 200 (multiple of 50)" min="200" step="50" value="200">
             </div>
           </div>
         </div>
@@ -77,13 +80,15 @@
   <div id="global-footer">Fundis.AI © All Rights Reserved 2025</div>
 
   <button id="theme-toggle" aria-label="Toggle dark mode">
-    <svg xmlns="http://www.w3.org/2000/svg" width="20" height="20" viewBox="0 0 24 24" fill="none" stroke="currentColor" stroke-width="2" stroke-linecap="round" stroke-linejoin="round">
+    <svg xmlns="http://www.w3.org/2000/svg" width="20" height="20" viewBox="0 0 24 24" fill="none" stroke="currentColor"
+      stroke-width="2" stroke-linecap="round" stroke-linejoin="round">
       <path d="M21 12.79A9 9 0 1 1 11.21 3 7 7 0 0 0 21 12.79z"></path>
     </svg>
   </button>
 
   <script src="assets/js/Person.js"></script>
   <script src="assets/js/Dog.js"></script>
+  <script src="assets/js/drawObjects.js"></script>
   <script src="assets/js/main.js"></script>
   <script src="assets/js/Toggle.js"></script>
 </body>
