Fix mobile fetch-status and footer (3)

--- a/index.html
+++ b/index.html
@@ -3,7 +3,7 @@
 
 <head>
   <meta charset="UTF-8" />
-  <meta name="viewport" content="width=device-width, initial-scale=1.0, initial-scale=1.0, viewport-fit=cover" />
+  <meta name="viewport" content="width=device-width, initial-scale=1.0, viewport-fit=cover" />
   <title>Fundis.AI</title>
   <meta name="description"
     content="Fundis.AI combines frontier AI innovations, quantitative methods and fundamentals research to turn market data into actionable insights, with a vision of transitioning to AI Agents to perform human-like investment research." />
