--- a/index.html
+++ b/index.html
@@ -6,13 +6,13 @@
   <meta name="viewport" content="width=device-width, initial-scale=1.0, viewport-fit=cover" />
   <title>Fundis.AI</title>
   <meta name="description"
-    content="Fundis.AI combines frontier AI innovations, quantitative methods and fundamentals research to turn market data into actionable insights, with a vision of transitioning to AI Agents to perform human-like investment research." />
+    content="Fundis leverages autonomous AI agents to deliver deep and decentralized insights into market fundamentals." />
   <meta name="keywords"
-    content="Fundis.AI, sentiment analysis, quantitative methods, fundamentals research, market insights" />
+    content="fundis, fundis.ai, sentichain, yototec, sentiment analysis, quantitative methods, fundamentals research, market insights" />
   <meta name="robots" content="index, follow" />
-  <meta property="og:title" content="Fundis.AI: Innovating Market Intelligence" />
+  <meta property="og:title" content="Fundis - AI Agent for Fundamental Insights" />
   <meta property="og:description"
-    content="Fundis.AI combines frontier AI innovations, quantitative methods and fundamentals research to turn market data into actionable insights." />
+    content="Yototec combines frontier AI innovations, quantitative methods and fundamentals research to turn market data into actionable insights." />
   <link rel="icon" href="favicon.svg" type="image/svg+xml" />
 
   <link rel="stylesheet" href="assets/css/styles.css">
