--- a/index.html
+++ b/index.html
@@ -88,6 +88,7 @@
   <script src="assets/js/Person.js"></script>
   <script src="assets/js/Dog.js"></script>
   <script src="assets/js/drawObjects.js"></script>
+  <script src="assets/js/Fundis.js"></script>
   <script src="assets/js/main.js"></script>
   <script src="assets/js/Toggle.js"></script>
 </body>
